Update ASFT streaming config to use mode-based API
Replaces `enabled`/`ref_strategy` with unified `mode` parameter in ASFTStreamingConfig. Adds "auto", "seq", "batch", "hybrid", and "off" modes with automatic fallback logic. Implements seq_kv_cache streaming with KV cache reuse and batch microbatching support. Updates notebook defaults to use `mode="auto"` for optimal VRAM reduction. Adds comprehensive tests for mode routing, fallback behavior, and backward compatibility.

--- a/Llama3_1_(8B)_Alpaca-ASFT.ipynb
+++ b/Llama3_1_(8B)_Alpaca-ASFT.ipynb
@@ -541,7 +541,7 @@
     "#### Recommended ASFT defaults (optimized)\n",
     "- `asft_mode=\"asft\"` + `kl_weight=0.05`: a solid starting point (stable, not overly restrictive).\n",
     "- `reference_policy=\"disable_adapter\"`: avoids keeping a separate frozen reference copy in most PEFT setups.\n",
-    "- `ASFTStreamingConfig(enabled=True, ref_strategy=\"batch_micro\")`: micro-batches the reference forward pass to reduce peak VRAM.\n",
+    "- `ASFTStreamingConfig(mode=\"auto\")`: tries seq_kv_cache first, falls back to batch micro to reduce peak VRAM.\n",
     "\n",
     "For quick comparisons, try: `asft_mode=\"sft\"` or `asft_mode=\"dft\"` (KL off)."
    ]
@@ -611,9 +611,9 @@
     "\n",
     "# Reference forward streaming to reduce VRAM peak\n",
     "asft_streaming = ASFTStreamingConfig(\n",
-    "    enabled = True,\n",
-    "    ref_strategy = \"batch_micro\",\n",
+    "    mode = \"auto\",\n",
     "    # ref_microbatch_size = 1,  # Set manually if desired; None picks automatically\n",
+    "    # seq_chunk_size = 256,    # Adjust for long sequences if needed\n",
     "    force_fp32_kl = True,\n",
     ")\n",
     "\n",
@@ -660,7 +660,7 @@
     "print(\"Reference policy:\", getattr(trainer, \"reference_policy\", None))\n",
     "streaming = getattr(trainer, \"asft_streaming\", None)\n",
     "if streaming is not None:\n",
-    "    print(\"Streaming enabled:\", getattr(streaming, \"enabled\", None))\n",
+    "    print(\"Streaming mode:\", getattr(streaming, \"mode\", None))\n",
     "    print(\"Streaming strategy:\", getattr(streaming, \"ref_strategy\", None))"
    ]
   },
